- Изменения под русский текст - Добавлены статьи с предыдущей версии блога

--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -45,7 +45,7 @@
 
   {% endif %} <!-- site.data.updates -->
 
-    <div id="access-tags">
+    <!-- <div id="access-tags">
       <h3 data-toc-skip>
         {{- site.data.label.panel.trending_tags -}}
       </h3>
@@ -56,7 +56,7 @@
         <a class="post-tag" href="{{ url | relative_url }}">{{ tag | replace: '-', ' ' }}</a>
        {% endfor %}
       </div>
-    </div>
+    </div> -->
 
   </div> <!-- .access -->
 
