--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,15 +68,15 @@
 
   {% elsif page.layout == 'page' %}
 
-    {% if page.title == 'Categories' %}
+    {% if page.type == 'Categories' %}
       <link rel="preload" href="{{ site.baseurl }}/assets/css/categories.css" as="style">
       <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/categories.css">
 
-    {% elsif page.title == 'Tags' %}
+    {% elsif page.type == 'Tags' %}
       <link rel="preload" href="{{ site.baseurl }}/assets/css/tags.css" as="style">
       <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/tags.css">
 
-    {% elsif page.title == 'Archives' %}
+    {% elsif page.type == 'Archives' %}
       <link rel="preload" href="{{ site.baseurl }}/assets/css/archives.css" as="style">
       <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/archives.css">
 
@@ -146,5 +146,24 @@
 
   <!-- PWA -->
   <script src="{{ '/app.js' | relative_url }}" defer></script>
+
+  <script type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function(){
+      function stripcdata(x) {
+        if (x.startsWith('% <![CDATA[') && x.endsWith('%]]>'))
+          return x.substring(11,x.length-4);
+        return x;
+      }
+      document.querySelectorAll("script[type='math/tex']").forEach(function(el){
+        el.outerHTML = "\\(" + stripcdata(el.textContent) + "\\)";
+      });
+      document.querySelectorAll("script[type='math/tex; mode=display']").forEach(function(el){
+        el.outerHTML = "\\[" + stripcdata(el.textContent) + "\\]";
+      });
+      var script = document.createElement('script');
+      script.src = "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js";
+      document.head.appendChild(script);
+    }, false);
+    </script>
 
 </head>
